--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "moment": "^2.29.3",
     "mongoose": "^6.4.0",
     "node-sass": "^7.0.1",
+    "nodemailer": "^6.7.7",
     "nodemon": "^2.0.16",
     "react-dom": "^18.2.0",
     "redux-devtools-extension": "^2.13.9",
