--- a/client/package.json
+++ b/client/package.json
@@ -9,12 +9,13 @@
     "@material-ui/icons": "^4.11.3",
     "@mui-treasury/components": "^1.10.1",
     "@mui/icons-material": "^5.8.4",
-    "@mui/material": "^5.8.4",
-    "@reduxjs/toolkit": "^1.8.2",
+    "@mui/material": "^5.8.7",
+    "@reduxjs/toolkit": "^1.8.3",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.2.1",
     "axios": "^0.27.2",
+    "cra-template-redux": "2.0.0",
     "material-ui": "^0.20.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -22,10 +23,11 @@
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "5.0.1",
     "reactjs-popup": "^2.0.5",
+    "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
-    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.4.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
