--- a/package.json
+++ b/package.json
@@ -4,12 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "client-install": "cd client && yarn install ",
-    "server": "nodemon index",
-    "start": "node index.js",
-    "client": "cd client && yarn  start ",
-    "dev": "concurrently \"yarn run server \" \"yarn run client\" ",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false &&  cd client && npm install && npm build "
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
+
   },
   "author": "suriya",
   "license": "ISC",
